apps/chatgpt-desktop/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: chatgpt-desktop
    app.kubernetes.io/name: chatgpt-desktop
    app.kubernetes.io/service: chatgpt-desktop
  name: chatgpt-desktop
  namespace: chatgpt-desktop
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: desktop
    app.kubernetes.io/instance: chatgpt-desktop
    app.kubernetes.io/name: chatgpt-desktop
  type: ClusterIP
